# workua-resume-toolkit

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-semantic.txt  requirements.txt
docs/examples/: db_row.sample.json
src/workua_toolkit/: __init__.py
src/workua_toolkit/cli/: main.py
src/workua_toolkit/config/: scraper_config.json  settings.py
src/workua_toolkit/db/: repo.py  schema.py
src/workua_toolkit/logging/: __init__.py  setup.py
src/workua_toolkit/processing/: processor.py  regex_extractor.py  regex_resume.py  types.py
src/workua_toolkit/scraper/: parsing.py  workua.py
src/workua_toolkit/scripts/: drop_db_tables.py  init_db.py
src/workua_toolkit/semantic/: __init__.py  similarity_matcher.py
src/workua_toolkit/ui/: app.py
